<resources>
    <string name="app_name">KeepItTogether_Login</string>
    <string name="main_menu">Main Menu</string>
    <string name="your_tasks">Your Tasks</string>
    <string name="view">View</string>
    <string name="add">Add</string>
    <string name="graphs">Graphs</string>
    <string name="completed">Completed</string>
    <string name="bill">Bill</string>
    <string name="chore">Chore</string>
    <string name="bill_chore">Bill/Chore</string>
    <string name="Register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="simplify_your_house">Simplify your house!</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="submit">Submit</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="to_do">To Do</string>
    <string name="unassigned">Unassigned</string>
    <string name="others">Others</string>
    <string name="Assignment">Assignment</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="repeat">Repeat?</string>
    <string name="cost">Cost:</string>
    <string name="edit">Edit</string>
    <string name="keepittogether">KeepItTogether</string>
    <string name="save">Save</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="select_dates">Select Dates</string>
    <string name="number_of_days">Number of days:</string>
    <string name="your_house">Your House</string>
    <string name="create_a_house">Create a House</string>
    <string name="create_your_house">Create Your House</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_postcode">Enter your postcode</string>
    <string name="enter_the_number_of_residents">Enter the number of residents</string>
    <string name="your_housemates">Your Housemates:</string>
    <string name="house_join_code">House Join Code:</string>
    <string name="leave_house">Leave House</string>
    <string name="house_settings">House Settings</string>
    <string-array name="names">
        <item>John</item>
        <!--        add users here-->
    </string-array>

</resources>