<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:padding="16dp"
    android:gravity = "center"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainMenu">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="50dp"
            android:fontFamily="monospace"
            android:text="@string/main_menu">
        </TextView>

    </LinearLayout>

    <Button
        android:inputType="textCapSentences"
        android:textSize="25dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/bt_your_tasks"
        android:text="@string/your_tasks"
        android:textColor="@android:color/white"
        android:translationY="-200dp"
        android:background="@drawable/menu_button"/>


    <Button
        android:inputType="textCapSentences"
        android:textSize="25dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/bt_view"
        android:text="@string/view"
        android:textColor="@android:color/white"
        android:translationY="-150dp"
        android:background="@drawable/menu_button"/>

    <Button
        android:inputType="textCapSentences"
        android:textSize="25dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/bt_add"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:translationY="-100dp"
        android:background="@drawable/menu_button"/>

    <Button
        android:inputType="textCapSentences"
        android:textSize="25dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/bt_your_house"
        android:text="@string/your_house"
        android:translationY="-50dp"
        android:textColor="@android:color/white"
        android:background="@drawable/menu_button"/>

</LinearLayout>