<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:gravity = "center"
    tools:context=".AccountLogin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="50sp"
        android:fontFamily="monospace"
        android:translationY="-90dp"
        android:text="@string/Register">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:fontFamily="monospace"
        android:translationY="-90dp"
        android:text="@string/simplify_your_house">
    </TextView>


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding = "10dp"
        android:gravity = "center"
        android:translationY="-60dp"
        android:background="@drawable/round_edit_text">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_name"
            android:hint="@string/enter_full_name"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding = "10dp"
        android:gravity = "center"
        android:translationY="-30dp"
        android:background="@drawable/round_edit_text">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email"/>
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:hint="@string/enter_email"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edit_text"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/enter_password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edit_text"
        android:gravity="center"
        android:translationY="30dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock" />

        <EditText
            android:id="@+id/et_Re_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/re_enter_password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/bt_submit"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:translationY="45dp"
        android:background="@drawable/round_button"/>

</LinearLayout>