<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    android:gravity = "center"
    tools:context=".AccountLogin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:fontFamily="monospace"
            android:text="@string/keepittogether">
        </TextView>

    </LinearLayout>


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src = "@drawable/ic_house"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding = "10dp"
        android:gravity = "center"
        android:background="@drawable/round_edit_text">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person"/>
         <EditText
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:id="@+id/et_email"
             android:hint="@string/enter_email"
             android:textColor="@android:color/white"
             android:textColorHint="@android:color/white"
             android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edit_text"
        android:gravity="center"
        android:padding="10dp"
        android:translationY="5dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="Enter Password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_submit"
            android:text="Submit"
            android:textColor="@android:color/white"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:fontFamily="monospace"
            android:text="New user? Register here!">
        </TextView>

    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/bt_register"
        android:text="@string/Register"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:translationY="50dp"
        android:background="@drawable/round_button"/>

</LinearLayout>